--- a/Submission_Model_LightFM.ipynb
+++ b/Submission_Model_LightFM.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/popudrak/DSC-PJATK/blob/main/Submission_Model_LightFM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -191,6 +201,7 @@
         "metadata['item_idx'] = metadata['parent_asin'].map(item_id_map)\n",
         "metadata = metadata[metadata['item_idx'].notnull()]\n",
         "metadata['item_idx'] = metadata['item_idx'].astype(int)\n",
+        "metadata['has_images'] = metadata['image_urls'].notnull()\n",
         "\n",
         "# Lista wszystkich możliwych cech, które model może uwzględniać\n",
         "item_features_list = (\n",
@@ -394,7 +405,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
